notifiable trait and expenses datatable added, general refactor

--- a/lang/es.json
+++ b/lang/es.json
@@ -68,5 +68,7 @@
     "Expenses": "Gastos",
     "View expenses": "Ver gastos",
     "Total:": "Total:",
-    "Menage's expenses":"Gastos del hogar"
+    "Menage's expenses":"Gastos del hogar",
+    "Search":"Buscar",
+    "User":"Usuario"
 }
